--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <div class="row">
         <div class="col-xl-6">
-          <h1>Revive la Belleza de las Obras Maestras en tus Espacios Interiores</h1>
-          <h2>Bienvenido a nuestra experiencia artística para el interior de tu hogar</h2>
+          <h1>EXPERIENCE THE BEAUTY OF MASTERPIECES OF ART IN YOUR INTERIOR SPACES</h1>
+          <h2>We welcome you to transform your home. Explore our artistic experience.</h2>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
         </div>
       </div>
@@ -109,9 +109,12 @@
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch">
             <div class="content">
-              <h3>Bienvenido a nuestra experiencia artística para el interior de tu hogar</h3>
+              <h3>REDISCOVER THE MAJESTY OF WORKS OF ART IN YOUR PERSONAL SPACES</h3>
               <p>
-                 En nuestra empresa de diseño de interiores, nos apasiona la idea de fusionar el arte y la decoración para crear espacios interiores verdaderamente inspiradores. Nos especializamos en la creación de ambientes que rinden homenaje a los grandes maestros del arte al incorporar sus obras icónicas en el diseño de tu hogar. Con nuestro enfoque creativo y nuestra atención meticulosa a los detalles, transformaremos tus espacios en una galería de arte personalizada.
+                 At our interior design firm, we are passionate about fusing art and décor to create truly inspiring
+interior spaces. We specialize in creating environments that pay homage to the great masters of art by
+incorporating their iconic works into the design of your home. With our creative approach and
+meticulous attention to detail, we will transform your spaces into a personalized art gallery.
               </p>
               <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
             </div>
