--- a/src/index.html
+++ b/src/index.html
@@ -124,23 +124,30 @@ meticulous attention to detail, we will transform your spaces into a personalize
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>AI Enhanced Experience</h4>
+                  <p>We use AI in customer service to deliver highly personalized experiences, improving service satisfaction and timeliness.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris nisi</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Technological Innovation</h4>
+                  <p>We integrate artificial intelligence to personalize experiences, adopting sustainable
+technologies and ethical policies.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>Safety and Ethics in AI:</h4>
+                  <p>We develop advanced cybersecurity and ethics policies to ensure transparency and
+fairness in the use of artificial intelligence.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Beatae veritatis</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <h4>Quality Customer Service</h4>
+                  <p>We establish customer service by being efficient and friendly.</p><p> We respond quickly to inquiries and resolve problems effectively.</p>
+                </div>
+                  <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+                  <i class="bx bx-shield"></i>
+                  <h4>Customized Services</h4>
+                  <p>We offer customized solutions according to individual customer needs.</p>
                 </div>
               </div>
             </div><!-- End .content-->
