added some texts and images

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Presento Bootstrap Template - Index</title>
+  <title>Homenajes y hogares</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="manifest" href="assets/img/site.webmanifest">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -42,7 +44,11 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-      <h1 class="logo me-auto"><a href="index.html">Presento<span>.</span></a></h1>
+      <h1 class="logo me-auto"><a href="index.html">
+        Homenajes Habitables
+        <span>.</span>
+      </a>
+    </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
 
@@ -70,8 +76,8 @@
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <div class="row">
         <div class="col-xl-6">
-          <h1>EXPERIENCE THE BEAUTY OF MASTERPIECES OF ART IN YOUR INTERIOR SPACES</h1>
-          <h2>We welcome you to transform your home. Explore our artistic experience.</h2>
+          <h1>Surround yourself with masterpieces: Transform your home into a gallery.</h1>
+          <h2>It is time to live with legends by reimagined iconic art for your home.</h2>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
         </div>
       </div>
@@ -111,10 +117,8 @@
             <div class="content">
               <h3>REDISCOVER THE MAJESTY OF WORKS OF ART IN YOUR PERSONAL SPACES</h3>
               <p>
-                 At our interior design firm, we are passionate about fusing art and décor to create truly inspiring
-interior spaces. We specialize in creating environments that pay homage to the great masters of art by
-incorporating their iconic works into the design of your home. With our creative approach and
-meticulous attention to detail, we will transform your spaces into a personalized art gallery.
+                Don't just decorate, elevate. We transform homes into personalized art galleries, 
+                seamlessly integrating iconic works from the masters. Our creative approach and meticulous attention to detail ensure your space inspires and reflects your unique style.
               </p>
               <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -124,20 +128,20 @@ meticulous attention to detail, we will transform your spaces into a personalize
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
-                  <h4>AI Enhanced Experience</h4>
-                  <p>We use AI in customer service to deliver highly personalized experiences, improving service satisfaction and timeliness.</p>
+                  <h4>Beyond Décor, Embrace Art:</h4>
+                  <p>We go beyond traditional decorating, weaving iconic art into the fabric of your living space for a truly inspiring and elevated experience</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Technological Innovation</h4>
-                  <p>We integrate artificial intelligence to personalize experiences, adopting sustainable
-technologies and ethical policies.</p>
+                  <h4>Meticulous Design for Your Art-Infused Home:</h4>
+                  <p>Our meticulous attention to detail ensures every element of your design complements the iconic art you love. We create a cohesive and personalized 
+                    masterpiece that reflects your taste and celebrates your passion for art.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Safety and Ethics in AI:</h4>
-                  <p>We develop advanced cybersecurity and ethics policies to ensure transparency and
-fairness in the use of artificial intelligence.</p>
+                  <h4>Reimagined for Your Everyday Life:</h4>
+                  <p>Experience the transformative power of art, no matter your budget or style. We help you find the perfect iconic works
+                     to integrate into your home, creating a space that inspires and reflects your everyday life.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
@@ -146,8 +150,8 @@ fairness in the use of artificial intelligence.</p>
                 </div>
                   <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Customized Services</h4>
-                  <p>We offer customized solutions according to individual customer needs.</p>
+                  <h4>Creative Vision, Personalized Approach</h4>
+                  <p>Our team of passionate designers combines a unique creative vision with a meticulous and personalized approach. We work closely with you to understand your style and preferences, crafting a space that is truly yours, infused with the art you love.</p>
                 </div>
               </div>
             </div><!-- End .content-->
@@ -329,50 +333,50 @@ fairness in the use of artificial intelligence.</p>
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
+          <p>Schedule a free consultation with our art and investment specialists. We'll discuss your goals and help you discover the financial potential of art integration in your home.</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-briefcase"></i>
-              <h4><a href="#">Lorem Ipsum</a></h4>
+              <h4><a href="#">Budget-Friendly Art Integration</a></h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-card-checklist"></i>
-              <h4><a href="#">Dolor Sitema</a></h4>
+              <h4><a href="#">Maximizing Your Design ROI</a></h4>
               <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-bar-chart"></i>
-              <h4><a href="#">Sed ut perspiciatis</a></h4>
+              <h4><a href="#">Seamless Project Management</a></h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-binoculars"></i>
-              <h4><a href="#">Nemo Enim</a></h4>
+              <h4><a href="#">Meticulous Cost Analysis</a></h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-brightness-high"></i>
-              <h4><a href="#">Magni Dolore</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4><a href="#">Personalized Financial Planning</a></h4>
+              <p>We understand the financial considerations of incorporating art into your home. Our team can work with you to create a personalized financial plan that seamlessly integrates art and budget management.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
               <i class="bi bi-calendar4-week"></i>
-              <h4><a href="#">Eiusmod Tempor</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4><a href="#">Expert Guidance:</a></h4>
+              <p>Our team boasts extensive experience in various analyses and project management, ensuring we approach your art gallery home with meticulous attention to detail and a focus on exceeding your expectations.</p>
             </div>
           </div>
         </div>
@@ -458,6 +462,20 @@ fairness in the use of artificial intelligence.</p>
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Card 13</h4>
+                <p>Card</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
@@ -513,8 +531,20 @@ fairness in the use of artificial intelligence.</p>
               </div>
             </div>
           </div>
- 
-
+         
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Card 23</h4>
+                <p>Card</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
