--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <div class="row">
         <div class="col-xl-6">
-          <h1>Surround yourself with masterpieces: Transform your home into a gallery.</h1>
+          <h1>Encuentrate a ti mismo rodeadoSurround yourself with masterpieces: Transform your home into a gallery.</h1>
           <h2>It is time to live with legends by reimagined iconic art for your home.</h2>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
         </div>
