--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
          
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Get in Contract</a></li>
            
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -76,7 +76,7 @@
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <div class="row">
         <div class="col-xl-6">
-          <h1>Encuentrate a ti mismo rodeadoSurround yourself with masterpieces: Transform your home into a gallery.</h1>
+          <h1>Surround yourself with masterpieces: Transform your home into a gallery.</h1>
           <h2>It is time to live with legends by reimagined iconic art for your home.</h2>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
         </div>
@@ -565,7 +565,7 @@
         <ul class="faq-list accordion" data-aos="fade-up">
 
           <li>
-            <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+            <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">Puedo modificar mi casa? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
