--- a/src/index.html
+++ b/src/index.html
@@ -566,8 +566,7 @@
             <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">Puedo modificar mi casa? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
-              </p>
+                Can reproducing the interiors of a Van Gog painting be subject to copyright claims?              </p>
             </div>
           </li>
 
