added meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Homenajes y hogares</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Majesty Habita</title>
+  <meta name="description" content="Transform your home into a personalized art gallery with Homenajes Habitables. Our expert designers seamlessly integrate iconic artworks, creating a stunning and inspiring living space.">
+  <meta name="keywords" content="interior design, art gallery, home decor, personalized design, art integration, iconic artworks, design services, home renovation, art consulting, financial planning, project management, home improvement, design inspiration, art appreciation, aesthetic, home decor trends, interior design ideas, home makeover, art collection, art investment">
+
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
