--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
       <h1 class="logo me-auto"><a href="index.html">
-        Homenajes Habitables
+        Majesty Habita
         <span>.</span>
       </a>
     </h1>
