fixed some typos

--- a/src/index.html
+++ b/src/index.html
@@ -564,10 +564,14 @@
         <ul class="faq-list accordion" data-aos="fade-up">
 
           <li>
-            <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">Puedo modificar mi casa? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+            <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">Can reproducing the interiors of a Vincent van Gogh painting be subject to copyright claims?
+ <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Can reproducing the interiors of a Van Gog painting be subject to copyright claims?              </p>
+               Generally, no, reproducing the interiors of a Van Gogh painting would not be subject to copyright claims.
+Here's why:
+Public Domain: Van Gogh died in 1890, and copyright typically lasts for the life of the author plus 70 years. Therefore, his works are now in the public domain, meaning anyone can use them freely without copyright restrictions.   
+Interior Design vs. Copyright: While you can freely use Van Gogh's paintings as inspiration for interior design, directly copying the exact colors, patterns, and arrangements found in his works might be considered derivative work. However, even if you were to create something strikingly similar, it's unlikely to infringe on copyright since the original work is in the public domain.          </p>
             </div>
           </li>
 
@@ -629,9 +633,13 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Si estás listo para dar vida a tu visión de un hogar que celebre el arte en todo su esplendor, no dudes en contactarnos. Nuestro equipo de diseñadores de interiores expertos estará encantado de discutir tus ideas, responder tus preguntas y comenzar a trabajar en la creación de tu galería de arte personalizada. Juntos, transformaremos tu hogar en un espacio que refleje tu pasión por las grandes obras maestras y te brinde una experiencia visual excepcional.</p>
+          <p>If you're ready to bring your vision of a home that celebrates art in all its splendor to life, don't hesitate to contact us. 
+            Our team of expert interior designers will be happy to discuss your ideas, answer your questions and get to work creating your 
+            custom art gallery. Together, we will transform your home into a space that reflects your passion for great masterpieces and 
+            provides you with an exceptional visual experience.
+           </p>
 
-            <p class="pt-4">¡Bienvenido a nuestro mundo de diseño de interiores inspirado en los grandes maestros del arte!</p>
+            <p class="pt-4">¡Welcome to our world of interior design inspired by the great masters of art!</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
